--- a/task3/css/style.css
+++ b/task3/css/style.css
@@ -32,6 +32,7 @@ img[src="images/ellipse.png"]{
     text-align: center;
     font-size: 34px;
     line-height: 36px;
+    padding-right: 50px;
     color: #f8f6f5;
 }
 
