--- a/task6/css/task6-1.css
+++ b/task6/css/task6-1.css
@@ -6,7 +6,7 @@ html {
     font-family: serif,"Microsoft YaHei";
 }
 
-@media screen and (min-width:320px) and (max-width:479px) {
+@media screen  and (max-width:479px) {
     html {
         font-size: 12px;
     }
@@ -23,7 +23,7 @@ html {
         font-size: 20px;
     }
 }
-@media screen and (min-width:720px) and (max-width:800px) {
+@media screen and (min-width:720px)  {
     html {
         font-size: 24px;
     }
@@ -142,6 +142,7 @@ position: relative;
 
 .vote{
   overflow: hidden;
+    padding-bottom: 110px;
 }
 
 
@@ -204,6 +205,7 @@ footer{
   bottom: 0;
   width: 100%;
   max-width: 800px;
+    min-width: 320px;
   padding: 3% 0;
   border-top: solid 1px white;
   text-align: center;
@@ -218,7 +220,11 @@ footer{
   color: white;
   background-color: rgb(251,180,53);
 }
-
+@media screen  and (max-width:320px) {
+    footer {
+        padding: 9.6px 0;
+    }
+}
 a{
   text-decoration:none;
 }
