--- a/js-task2/css/style.css
+++ b/js-task2/css/style.css
@@ -56,6 +56,7 @@ header span{
     float: left;
     padding-bottom: 39px;
     width: 484px;
+    height: 360px;
     border-bottom: 1px solid #d9d9d9;
     overflow: hidden;
 }
@@ -64,10 +65,12 @@ header span{
     list-style: none;
     box-sizing: border-box;
     padding: 40px 33px 0 33px;
-    width: 50%;
+    width: 100%;
     font-size: 26px;
     letter-spacing: -.5px;
     color: #a1a1a1;
+}
+.assign li p{
 
 }
 .assign li>:first-child{
