--- a/js-task5/css/js-task5.css
+++ b/js-task5/css/js-task5.css
@@ -1,5 +1,4 @@
 
-
 body{
     margin: 0;
     padding: 0;
@@ -26,21 +25,38 @@ input{
     width:80%;
     max-width: 540px;
     min-width: 300px;
-    background-color: #d0d3d8;
+    background-color: transparent;
     overflow: hidden;
 }
-
-.main p{
+.nav{
+    font-size: 0;
+}
+#login,#signUp {
+    width: 50%;
     text-align: center;
     letter-spacing: 1px;
     font-size: 30px;
+    font-family: inherit;
     line-height: 90px;
     color: #03a9f4;
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+}
+#login{
+    background-color: #d0d3d8;
+}
+#signUp{
+    background-color: inherit;
+}
+#show-login{
+    overflow: hidden ;
+    background-color: #d0d3d8;
 }
 
 label{
     display: block;
-    margin: 0 auto 20px auto;
+    margin: 20px auto;
     padding: 20px 0 ;
     width: 435px;
     background-color: #fff;
@@ -66,7 +82,7 @@ label input{
     outline: none;
 }
 
-#submit{
+#submit1, #submit2{
     display: block;
     margin: 70px auto 30px auto;
     width: 435px;
@@ -78,4 +94,29 @@ label input{
     outline: none;
     border: none;
     border-radius: 3px;
+}
+
+#show-signUp{
+    display: none;
+    overflow: hidden ;
+    background-color: #d0d3d8;
+}
+
+#captcha-img{
+    padding: 0;
+    margin-top: -14px;
+    margin-right: 20px;
+    float: right;
+    border: none;
+}
+#button-verify{
+    padding: 15px;
+    margin-top: -15px;
+    margin-right: 20px;
+    float: right;
+    width: 25%;
+}
+
+.input2{
+    padding-left: 20px;
 }
