--- a/js-task6/css/js-task5.css
+++ b/js-task6/css/js-task5.css
@@ -3,7 +3,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: "Microsoft YaHei" , serif;
-    min-width: 1100px;
+    /*min-width: 1100px;*/
 }
 /*清除input type=number下的小箭头*/
 input::-webkit-outer-spin-button,
@@ -22,6 +22,7 @@ input{
     width: 100%;
     min-width: 1100px;
     height: auto;
+    min-height: 100vh;
 }
 
 .main{
@@ -82,6 +83,7 @@ label input{
     width: 20em;
     vertical-align: middle;
     font-size: 14px;
+    font-weight: normal;
     line-height: 18px;
     border: none;
     outline: none;
