--- a/js-task6/css/js-task5.css
+++ b/js-task6/css/js-task5.css
@@ -15,14 +15,15 @@ input{
     font-family: "Microsoft YaHei" , serif;
 }
 .background{
-    position: absolute;
-    top:0;
-    left:0;
-    z-index: -1;
+
     width: 100%;
-    min-width: 1100px;
+    min-width: 700px;
     height: auto;
     min-height: 100vh;
+    background-image: url("../images/background.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    overflow: auto;
 }
 
 .main{
