--- a/js-task6/css/page4.css
+++ b/js-task6/css/page4.css
@@ -1,12 +1,23 @@
+
+.main{
+    max-width: 450px;
+    margin: 30px auto;
+    height: calc(100vh - 120px);
+}
+
+.form-group{
+    overflow: hidden;
+}
+
 .tablecell{
-    display: table-cell;
-    padding: 6px 12px;
-    width: 4em;
     font-size: 14px;
-    font-weight: normal;
-    line-height: 1;
+    line-height: 34px;
+    font-weight: bold;
     color: #555;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
+}
+
+
+.error{
+    color: #ff0000;
+    margin: 5px 0 0 15px
 }
